Changed EntityFluff.Component to EntityFluff.System
Avoid name clash with java.awt.Component.